--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
         <org.slf4j-version>1.7.6</org.slf4j-version>
 
-        <jetty.version>8.1.14.v20131031</jetty.version>
+        <jetty.version>9.2.10.v20150310</jetty.version>
 
         <logback.version>1.1.2</logback.version>
 
@@ -677,7 +677,7 @@
             </plugin>
 
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
+                <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
                 <configuration>
