Replace connection management with js frontend
References #11701

--- a/pom.xml
+++ b/pom.xml
@@ -655,6 +655,7 @@
                         <include>**Test.js</include>
                         <include>models/**Test.js</include>
                         <include>views/**Test.js</include>
+                        <include>connection/**Test.js</include>
                     </specIncludes>
                     <sourceIncludes>
                         <include>lib/jquery*.js</include>
@@ -670,6 +671,9 @@
                         <include>routing/models/*.js</include>
                         <include>routing/views/*.js</include>
                         <include>routing/*.js</include>
+                        <include>connections/models/*.js</include>
+                        <include>connections/views/*.js</include>
+                        <include>connections/*.js</include>
                     </sourceIncludes>
 
                 </configuration>
