Allow adding subconnections
refs #11701

--- a/pom.xml
+++ b/pom.xml
@@ -676,6 +676,7 @@
                         <include>connections/models/connection-terminal.js</include>
                         <include>connections/models/distances.js</include>
                         <include>connections/models/routetype.js</include>
+                        <include>connections/models/subconnection.js</include>
                         <include>connections/models/connection.js</include>
                         <include>connections/models/*.js</include>
                         <include>connections/views/*.js</include>
