--- a/pom.xml
+++ b/pom.xml
@@ -656,6 +656,7 @@
                         <include>models/**Test.js</include>
                         <include>views/**Test.js</include>
                         <include>connection/**Test.js</include>
+                        <include>connection/models/**Test.js</include>
                     </specIncludes>
                     <sourceIncludes>
                         <include>lib/jquery*.js</include>
