--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.contargo</groupId>
     <artifactId>iris</artifactId>
-    <version>1.7</version>
+    <version>1.8-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -59,7 +59,7 @@
         <url>https://github.com/Contargo/iris</url>
         <connection>scm:git:https://github.com/Contargo/iris.git</connection>
         <developerConnection>scm:git:https://github.com/Contargo/iris.git</developerConnection>
-      <tag>iris-1.7</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
