--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <org.springframework.data.jpa-version>1.8.0.RELEASE</org.springframework.data.jpa-version>
 
         <org.slf4j-version>1.7.6</org.slf4j-version>
-        <jetty.version>9.2.10.v20150310</jetty.version>
+        <jetty.version>8.1.16.v20140903</jetty.version>
         <logback.version>1.1.2</logback.version>
 
         <!-- Unit test and integration test coverage for sonar -->
@@ -707,15 +707,17 @@
             </plugin>
 
             <plugin>
-                <groupId>org.eclipse.jetty</groupId>
+                <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
                 <configuration>
                     <stopKey>stop</stopKey>
                     <stopPort>9966</stopPort>
-                    <httpConnector>
-                        <port>8082</port>
-                    </httpConnector>
+                    <connectors>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>8082</port>
+                        </connector>
+                    </connectors>
                 </configuration>
             </plugin>
 
