--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>net.contargo</groupId>
     <artifactId>iris</artifactId>
-    <version>1.8</version>
+    <version>1.9-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
