add org.unitils core to test scope

--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,7 @@
             <groupId>org.unitils</groupId>
             <artifactId>unitils-core</artifactId>
             <version>3.4.2</version>
+            <scope>test</scope>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-logging</artifactId>
