--- a/pom.xml
+++ b/pom.xml
@@ -183,10 +183,12 @@
             <version>3.3.2</version>
         </dependency>
 
+
+
         <dependency>
-            <groupId>commons-dbcp</groupId>
-            <artifactId>commons-dbcp</artifactId>
-            <version>1.4</version>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>7.0.35</version>
         </dependency>
 
         <!-- Servlet -->
