--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/iris
 database.username=root
 database.password=
+database.maxActive=100
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.hbm2ddl.auto=validate
 
