--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,11 @@
             <version>0.1.2</version>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>2.7.8</version>
+        </dependency>
+        <dependency>
             <groupId>de.appelgriepsch.logback</groupId>
             <artifactId>logback-gelf-appender</artifactId>
             <version>1.0</version>
