--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -1,16 +1,14 @@
-# Settings for using Nominatim to geocode addresses
-# http://nominatim.openstreetmap.org/
-# For further information about query parameters have a look at: http://wiki.openstreetmap.org/wiki/Nominatim
+# global properties
+application.version=${project.groupId}:${project.artifactId}:${project.version} - build at ${buildTime} by ${user.name}
+error.reports.basepath=error-reports
 
+# Settings for using Nominatim to geocode addresses -http://nominatim.openstreetmap.org/
+# For further information about query parameters have a look at: http://wiki.openstreetmap.org/wiki/Nominatim
 nominatim.base.url=http://maps.contargo.net/nominatim/
 osrm.url=http://maps2.contargo.net/osrm/viaroute
-error.reports.basepath=error-reports
 
 # preferred language for showing search results, overrides browser language
 nominatim.language=de
-
-application.version=${project.groupId}:${project.artifactId}:${project.version} - build at ${buildTime} by ${user.name}
-
 
 #Database
 liquibase.context=
