--- a/pom.xml
+++ b/pom.xml
@@ -171,10 +171,9 @@
         </dependency>
 
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <!-- Replace with the version of the MySQL driver you want to use -->
-            <version>5.1.29</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>1.3.5</version>
         </dependency>
 
         <dependency>
