--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ nominatim.language=de
 
 #Database
 liquibase.context=
-database.driver=com.mysql.jdbc.Driver
+database.driver=org.mariadb.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/iris
 database.username=root
 database.password=
