--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <version>${org.springframework.security-version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>1.3.2.RELEASE</version>
+        </dependency>
         <!-- Spring data / JPA / Hibernate -->
         <dependency>
             <groupId>org.springframework.data</groupId>
