--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ logback.configuration.file=logback.xml
 # Monitoring
 statsd.host=
 statsd.port=
+
+info.app.name=${project.artifactId}
+info.app.version=${project.version}
+info.build.date=${buildTime}
+info.build.gav=${project.groupId}:${project.artifactId}:${project.version}
