--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>net.contargo</groupId>
     <artifactId>iris</artifactId>
-    <version>1.13-SNAPSHOT</version>
+    <version>1.13</version>
     <packaging>war</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
