--- a/src/main/resources/application-jenkins.properties
+++ b/src/main/resources/application-jenkins.properties
@@ -13,7 +13,7 @@ nominatim.language=de
 #Database
 liquibase.context=
 database.driver=org.mariadb.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/irisci
+database.url=jdbc:mysql://localhost:${host.port}/iris
 database.username=root
 database.password=
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
