--- a/pom.xml
+++ b/pom.xml
@@ -562,25 +562,9 @@
             </plugin>
 
             <plugin>
-                <groupId>com.github.klieber</groupId>
-                <artifactId>phantomjs-maven-plugin</artifactId>
-                <version>0.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>install</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <version>1.9.2</version>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <groupId>com.github.searls</groupId>
                 <artifactId>jasmine-maven-plugin</artifactId>
-                <version>1.3.1.1</version>
+                <version>2.2</version>
 
                 <executions>
                     <execution>
@@ -594,14 +578,8 @@
 
                     <keepServerAlive>true</keepServerAlive>
 
-                    <webDriverClassName>org.openqa.selenium.phantomjs.PhantomJSDriver</webDriverClassName>
-
-                    <webDriverCapabilities>
-                        <phantomjs.binary.path>${phantomjs.binary}</phantomjs.binary.path>
-                    </webDriverCapabilities>
-
                     <specIncludes>
-                        <include>jasmine-jquery-1.3.1.js</include>
+                        <include>jasmine-jquery.js</include>
                         <include>globalsetup.js</include>
                         <include>**Test.js</include>
                         <include>models/**Test.js</include>
