--- a/pom.xml
+++ b/pom.xml
@@ -663,7 +663,7 @@
                                             <MYSQL_DATABASE>iris</MYSQL_DATABASE>
                                         </env>
                                         <wait>
-                                            <log>mysqld: ready for connections</log>
+                                            <log>socket: '/var/run/mysqld/mysqld.sock'  port: 3306  mariadb.org binary distribution</log>
                                             <time>40000</time>
                                         </wait>
                                     </run>
