Update maps.contargo.net route endpoint to match osrm 5.x api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ error.reports.basepath=error-reports
 # Settings for using Nominatim to geocode addresses - http://nominatim.openstreetmap.org/
 # For further information about query parameters have a look at: http://wiki.openstreetmap.org/wiki/Nominatim
 nominatim.base.url=http://maps.contargo.net/nominatim/
-osrm.url=http://maps.contargo.net/osrm/viaroute
+osrm.url=http://maps.contargo.net/osrm/route
 
 # preferred language for showing search results, overrides browser language
 nominatim.language=de
