Exclude maven wrapper from linguist analysis

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 src/main/webapp/client/js/lib/**/** linguist-vendored=true
 src/main/webapp/api-docs/**/** linguist-vendored=true
+mvnw linguist-vendored=true
