add functionallity to switch between different corporate identities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,5 @@ info.app.name=${project.artifactId}
 info.app.version=${project.version}
 info.build.date=${buildTime}
 info.build.gav=${project.groupId}:${project.artifactId}:${project.version}
+
+style.CI=CI
