--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,11 @@ info.build.date=${buildTime}
 info.build.gav=${project.groupId}:${project.artifactId}:${project.version}
 
 style.CI=CI
+
+mail.templatepath=classpath:/mailtemplates/
+mail.service=dummyEmailService
+mail.host=
+mail.port=
+mail.username=
+mail.password=
+mail.from=iris@example.com
