--- a/pom.xml
+++ b/pom.xml
@@ -434,6 +434,11 @@
             <artifactId>quartz</artifactId>
             <version>2.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
