--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ error.reports.basepath=error-reports
 # For further information about query parameters have a look at: http://wiki.openstreetmap.org/wiki/Nominatim
 nominatim.base.url=http://maps.contargo.net/nominatim/
 osrm.url=http://maps.contargo.net/osrm/route
-maps.host=http://maps.contargo.net
+
+elevationprovider.url=http://maps.contargo.net
 
 # preferred language for showing search results, overrides browser language
 nominatim.language=de
@@ -47,7 +48,6 @@ addresses.csvdir=csv/
 addresses.cron=0 * * * * ?
 
 feature.dtruck=false
-feature.elevationService=true
 
 cookies.link=https://example.com
 
