--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ error.reports.basepath=error-reports
 nominatim.base.url=http://maps.contargo.net/nominatim/
 osrm.url=http://maps.contargo.net/osrm/route
 
-elevationprovider.url=http://maps.contargo.net
+elevationprovider.url=https://maps.contargo.net
 
 # preferred language for showing search results, overrides browser language
 nominatim.language=de
