--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         <logback.version>1.2.3</logback.version>
         <org.aspectj-version>1.9.2</org.aspectj-version>
 
-        <spring.test.junit5>1.3.1</spring.test.junit5>
+        <spring.test.junit5>1.4.0</spring.test.junit5>
 
         <!-- Unit test and integration test coverage for sonar -->
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -281,6 +281,12 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>5.4.0</version>
             <scope>test</scope>
         </dependency>
