--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 script: mvn verify
 
 jdk:
-  - oraclejdk8
+  - openjdk8
 
 before_script:
   - mysql -e 'create database iris;'
@@ -14,3 +14,4 @@ cache:
 
 addons:
     mariadb: '10.0'
+
