--- a/pom.xml
+++ b/pom.xml
@@ -85,12 +85,12 @@
         <repository>
             <id>mapfish</id>
             <name>mapfish geotools</name>
-            <url>http://dev.mapfish.org/maven/repository/org/geotools//</url>
+            <url>http://dev.mapfish.org/maven/repository/org/geotools</url>
         </repository>
         <repository>
             <id>osgeo</id>
-            <name>Open Source Geospatial Foundation Repository</name>
-            <url>http://download.osgeo.org/webdav/geotools/</url>
+            <name>OSGeo Release Repository</name>
+            <url>https://repo.osgeo.org/repository/release</url>
         </repository>
         <repository>
             <id>oss-jfrog-artifactory</id>
