Use https for communination with maps servers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ error.reports.basepath=error-reports
 
 # Settings for using Nominatim to geocode addresses - http://nominatim.openstreetmap.org/
 # For further information about query parameters have a look at: http://wiki.openstreetmap.org/wiki/Nominatim
-nominatim.base.url=http://maps.contargo.net/nominatim/
-osrm.url=http://maps.contargo.net/osrm/route
+nominatim.base.url=https://maps.contargo.net/nominatim/
+osrm.url=https://maps.contargo.net/osrm/route
 
 elevationprovider.url=https://maps.contargo.net
 
