Fix route details api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,8 @@ mail.from=iris@example.com
 addresses.csvdir=csv/
 addresses.cron=0 * * * * ?
 
+# This feature is currently broken, cause MainRunPartEnricher does not check for DTRUCK anymore.
+# For more details see https://projects.contargo.net/issues/43751
 feature.dtruck=false
 
 cookies.link=https://example.com
